--- a/01_intro.ipynb
+++ b/01_intro.ipynb
@@ -2276,45 +2276,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 159,
    "id": "a0032be6-8fe8-4836-a3b2-612b5bfdd923",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<function dict.keys>"
+       "dict_keys(['name', 'age', 'location', 'numbers', 'friends'])"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dict_a.keys"
+    "dict_a.keys()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 161,
    "id": "a0f5709e-e677-4c23-bb67-d4c0e9cc6080",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'dict' object has no attribute 'value'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[158], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mdict_a\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvalue\u001b[49m()\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'dict' object has no attribute 'value'"
-     ]
+     "data": {
+      "text/plain": [
+       "dict_values(['changhee', 10, 'seoul', [1, 2, 3, 4, 5], {'a': 10, 'b': 11}])"
+      ]
+     },
+     "execution_count": 161,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "dict_a.value()"
+    "dict_a.values()"
    ]
   },
   {
@@ -2324,7 +2323,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dict_value(['changhee', 10, 'seoul', [1, 2, 3, 4, 5], {`a`}])"
+    "dict_values(['changhee', 10, 'seoul', [1, 2, 3, 4, 5], {'a': 10, 'b': 11}])"
    ]
   },
   {
@@ -2342,14 +2341,22 @@
     "\n",
     "- 시퀀스 자료형\n",
     "\n",
-    "1.[List] : mutable\n",
-    "2.(Tuple) : immutable\n",
-    "3.range() : immutable\n",
-    "4.'String' : immutable\n",
+    "    1. [List] : mutable\n",
+    "    2. (Tuple) : immutable\n",
+    "    3. range() : immutable\n",
+    "    4. 'String' : immutable\n",
     "- 시퀀스가 아닌 자료형\n",
-    "  1.{Set} : mutable\n",
-    "  2.{Dict ionary} : mutable"
+    "  1. {Set} : mutable\n",
+    "  2. {Dict ionary} : mutable"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d3e0e7b-975a-4f88-9b0e-fb6236172319",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
