--- a/04_datastructure.ipynb
+++ b/04_datastructure.ipynb
@@ -1256,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 11,
    "id": "1c430d13-700c-4dad-8722-e7d66f718875",
    "metadata": {},
    "outputs": [],
@@ -1278,7 +1278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 12,
    "id": "07869a1d-589d-44d6-a5a1-3778bd3484a7",
    "metadata": {},
    "outputs": [
@@ -1302,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 13,
    "id": "c1725a52-d388-4e10-b859-06fa7cff504c",
    "metadata": {},
    "outputs": [
@@ -1310,13 +1310,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'서울': 100, '부산': 50, '광주': 80}\n"
+      "{'서울': '나쁨', '부산': '나쁨', '광주': '나쁨'}\n"
      ]
     }
    ],
    "source": [
     "# 2.comp\n",
-    "result2 = { k : v for k, v in dust.items() if v >= 50}\n",
+    "result2 = { k : '나쁨' for k, v in dust.items() if v >= 50}\n",
     "print(result2)"
    ]
   },
@@ -1330,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 5,
    "id": "5c247672-fec5-4388-9d25-22398f79ea2d",
    "metadata": {},
    "outputs": [],
@@ -1340,7 +1340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 6,
    "id": "d3e77d0b-49f1-4054-9ee0-72b8e9e46aa6",
    "metadata": {},
    "outputs": [
@@ -1348,34 +1348,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'banana', 'watermelon', 'melon', 'apple'}\n",
-      "{'banana', 'watermelon', 'melon', 'apple'}\n"
+      "{'banana', 'apple', 'melon', 'watermelon'}\n",
+      "{'banana', 'apple', 'melon', 'watermelon'}\n"
      ]
     }
    ],
    "source": [
     "# .add(x)\n",
-    "fruite.add('watermelon')\n",
-    "print(fruite)\n",
-    "fruite.add('watermelon')\n",
-    "print(fruite)"
+    "fruits.add('watermelon')\n",
+    "print(fruits)\n",
+    "fruits.add('watermelon')\n",
+    "print(fruits)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 8,
    "id": "483e3db0-0a17-4318-b9eb-20ee18b3eb68",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'set' object has no attribute 'updata'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[133], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# .updata()\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# fruits.updata('grepe')\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# print(fruits)\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m \u001b[43mfruits\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mupdata\u001b[49m({\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgrepe\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124morage\u001b[39m\u001b[38;5;124m'\u001b[39m})\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(fruits)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'set' object has no attribute 'updata'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'melon', 'orange', 'grepe', 'banana', 'apple', 'watermelon'}\n"
      ]
     }
    ],
@@ -1383,25 +1379,21 @@
     "# .updata()\n",
     "# fruits.updata('grepe')\n",
     "# print(fruits)\n",
-    "fruits.updata({'grepe', 'orange'})\n",
+    "fruits.update({'grepe', 'orange'})\n",
     "print(fruits)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 9,
    "id": "1f541921-2bb0-479e-a199-8a5c3aeedadd",
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'orage'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[135], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# remove(x)\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mfruits\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mremove\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43morage\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(fruits)\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'orage'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'melon', 'grepe', 'banana', 'apple', 'watermelon'}\n"
      ]
     }
    ],
